--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Happiness Program</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     :root {
       --primary: #8b4c00;
@@ -12,7 +12,7 @@
       --text: #2b2b2b;
       --card: #ffffff;
       --shadow: rgba(0, 0, 0, 0.05);
-      --gray: #e5e5e5;
+      --gray: #f4f4f4;
     }
 
     * {
@@ -27,39 +27,41 @@
       color: var(--text);
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       min-height: 100vh;
       padding: 1rem;
     }
 
     .container {
       background: var(--card);
-      padding: 2rem;
+      padding: 1.5rem;
       border-radius: 12px;
       box-shadow: 0 8px 24px var(--shadow);
-      max-width: 480px;
+      max-width: 400px;
       width: 100%;
     }
 
     h1 {
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       color: var(--primary);
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.3rem;
+      font-weight: 600;
     }
 
     .section {
-      margin: 1.25rem 0;
+      margin: 1rem 0;
     }
 
     p {
-      font-size: 0.9rem;
-      line-height: 1.5;
-      margin: 0.4rem 0;
+      font-size: 0.85rem;
+      line-height: 1.45;
+      margin: 0.3rem 0;
     }
 
     a {
       color: var(--primary);
       text-decoration: none;
+      font-size: 0.85rem;
     }
 
     a:hover {
@@ -70,30 +72,30 @@
       display: inline-block;
       background: var(--primary);
       color: #fff;
-      padding: 0.7rem 1.4rem;
+      padding: 0.6rem 1.2rem;
       border-radius: 8px;
-      font-weight: 600;
-      font-size: 0.9rem;
+      font-weight: 500;
+      font-size: 0.85rem;
       margin-top: 1rem;
       text-align: center;
     }
 
     .qr img {
-      width: 100px;
+      width: 90px;
       margin-top: 1rem;
     }
 
     .copy-box {
       background: var(--gray);
-      padding: 1rem;
+      padding: 0.8rem;
       border-radius: 8px;
-      font-size: 0.8rem;
+      font-size: 0.75rem;
       white-space: pre-line;
       position: relative;
     }
 
     .copy-controls {
-      margin-top: 0.5rem;
+      margin-top: 0.4rem;
       display: flex;
       justify-content: flex-end;
       align-items: center;
@@ -104,28 +106,36 @@
       background: none;
       border: none;
       cursor: pointer;
-      font-size: 0.85rem;
+      font-size: 0.8rem;
       display: flex;
       align-items: center;
       color: var(--primary);
+      padding: 0;
     }
 
     .icon-btn svg {
-      margin-right: 4px;
+      margin-right: 3px;
     }
 
     .feedback {
-      font-size: 0.75rem;
+      font-size: 0.7rem;
       color: green;
       display: none;
-      margin-left: auto;
     }
 
     .social {
       display: flex;
-      gap: 1rem;
-      margin-top: 1.2rem;
-      justify-content: center;
+      gap: 1.5rem;
+      margin-top: 1rem;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    .social svg {
+      width: 20px;
+      height: 20px;
+      fill: var(--primary);
+      cursor: pointer;
     }
   </style>
 </head>
@@ -138,7 +148,7 @@
     <div class="section">
       <p><strong>Venue:</strong></p>
       <p>Art of Living International Center<br>Kanakapura Main Road, Bengaluru</p>
-      <a href="https://goo.gl/maps/K7A1Yhtz1yN2" target="_blank">📍 Google Maps</a>
+      <a href="https://goo.gl/maps/K7A1Yhtz1yN2" target="_blank">Google Maps</a>
     </div>
 
     <div class="section">
@@ -152,7 +162,7 @@ Register: https://programs.vvmvp.org/events/553/
       </div>
       <div class="copy-controls">
         <button class="icon-btn" onclick="copyText('detailsText', 'feedback1')">
-          <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M10 1.5a.5.5 0 0 1 .5.5v1h-1v-1h-7v11h7v-1h1v1a.5.5 0 0 1-.5.5h-7A1.5 1.5 0 0 1 2 13V2.5A1.5 1.5 0 0 1 3.5 1h7z"/><path d="M13.5 3a.5.5 0 0 1 .5.5v8.793l-2.146-2.147-.708.708L14.293 13l-3.147 3.146.708.708L15 13.707V3.5a.5.5 0 0 1 .5-.5z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 18H8V7h11v16z"/></svg>
           Copy
         </button>
         <span class="feedback" id="feedback1">Copied!</span>
@@ -167,14 +177,13 @@ Register: https://programs.vvmvp.org/events/553/
 
     <div class="social">
       <a href="https://api.whatsapp.com/send?text=Join%20the%20Happiness%20Program%20(25–27%20Jul%202025)%20with%20Vishal%20Ji%20%26%20Vikram%20Ji%20in%20Bengaluru!%20https%3A%2F%2Fprograms.vvmvp.org%2Fevents%2F553%2F" target="_blank">
-        📤 WhatsApp
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M16 .003C7.163.003.003 7.162.003 16c0 2.82.737 5.46 2.02 7.778L.001 32l8.455-2.195A15.9 15.9 0 0016 31.997c8.837 0 15.997-7.16 15.997-15.997C31.997 7.162 24.837.003 16 .003zm0 29.314a13.3 13.3 0 01-6.767-1.818l-.486-.29-5.02 1.303 1.337-4.89-.317-.5A13.263 13.263 0 012.707 16c0-7.31 5.983-13.293 13.293-13.293 7.31 0 13.293 5.983 13.293 13.293 0 7.31-5.983 13.293-13.293 13.293z"/><path d="M24.155 19.557c-.374-.187-2.22-1.1-2.565-1.224-.345-.124-.597-.187-.848.188-.25.374-.973 1.223-1.194 1.472-.22.25-.438.281-.812.093-.374-.187-1.58-.582-3.01-1.857-1.112-.993-1.863-2.217-2.08-2.591-.218-.374-.024-.576.163-.763.168-.167.374-.437.561-.655.187-.219.25-.374.374-.624.125-.25.062-.468-.03-.655-.093-.187-.848-2.042-1.16-2.796-.305-.73-.614-.626-.848-.626h-.717c-.219 0-.574.082-.874.375-.3.292-1.147 1.12-1.147 2.723 0 1.603 1.175 3.15 1.337 3.364.163.219 2.32 3.54 5.626 4.963.787.34 1.4.543 1.878.696.788.25 1.504.215 2.07.131.632-.094 2.22-.905 2.535-1.78.312-.874.312-1.623.218-1.78-.094-.156-.344-.25-.718-.438z"/></svg>
       </a>
       <a href="https://www.instagram.com/" target="_blank">
-        📸 Instagram
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7a3 3 0 0 1 3-3h10zm-5 3a5 5 0 1 0 .001 10.001A5 5 0 0 0 12 7zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.5-3a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"/></svg>
       </a>
       <button class="icon-btn" onclick="copyTextDirect('https://programs.vvmvp.org/events/553/', 'feedback2')">
-        <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M10 1.5a.5.5 0 0 1 .5.5v1h-1v-1h-7v11h7v-1h1v1a.5.5 0 0 1-.5.5h-7A1.5 1.5 0 0 1 2 13V2.5A1.5 1.5 0 0 1 3.5 1h7z"/><path d="M13.5 3a.5.5 0 0 1 .5.5v8.793l-2.146-2.147-.708.708L14.293 13l-3.147 3.146.708.708L15 13.707V3.5a.5.5 0 0 1 .5-.5z"/></svg>
-        Copy Link
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 18H8V7h11v16z"/></svg>
       </button>
       <span class="feedback" id="feedback2">Copied!</span>
     </div>
