--- a/index.html
+++ b/index.html
@@ -1,52 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happiness Program</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div class="card">
-    <h1>Happiness Program</h1>
-    <p class="subtitle">with Vishal Ji & Vikram Ji</p>
+  <div class="container">
+    <div class="phone-frame">
+      <div class="card">
+        <h1>Happiness Program</h1>
+        <p class="subtitle">with Vishal Ji & Vikram Ji</p>
 
-    <div class="section">
-      <p class="location"><span class="pin">📍</span> <strong>Location:</strong><br>
-        Art of Living International Center<br>
-        Bengaluru, Karnataka
-      </p>
-      <a href="https://goo.gl/maps/K7A1Yhtz1yN2" target="_blank" class="btn btn-map">Google Maps</a>
-    </div>
+        <div class="section">
+          <p class="location">
+            <span class="pin">📍</span> <strong>Location:</strong><br />
+            Art of Living International Center<br />
+            Bengaluru, Karnataka
+          </p>
+          <a href="https://goo.gl/maps/K7A1Yhtz1yN2" target="_blank" class="btn btn-map">Google Maps</a>
+        </div>
 
-    <ul class="timeline">
-      <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
-      <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
-      <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
-      <li><strong>28 Jul</strong> – Checkout by 9:30 AM</li>
-    </ul>
+        <ul class="timeline">
+          <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
+          <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
+          <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
+          <li><strong>28 Jul</strong> – Checkout by 9:30 AM</li>
+        </ul>
 
-    <a href="https://programs.vvmvp.org/events/553/" class="btn btn-register" target="_blank">Register Today</a>
+        <a href="https://programs.vvmvp.org/events/553/" class="btn btn-register" target="_blank">Register Today</a>
 
-    <div class="copy-section">
-      <textarea readonly class="copy-text" id="details">Happiness Program | 25–27 July 2025
+        <div class="copy-section">
+          <textarea readonly class="copy-text" id="details">Happiness Program | 25–27 July 2025
 Vishal Ji & Vikram Ji
 Bangalore Ashram
 https://programs.vvmvp.org/events/553/</textarea>
-      <button onclick="copyDetails()" class="btn btn-copy">Copy Details</button>
-    </div>
+          <button onclick="copyDetails()" class="btn btn-copy">Copy Details</button>
+        </div>
 
-    <div class="social">
-      <a href="https://api.whatsapp.com/send?text=Join%20the%20Happiness%20Program%20(25–27%20Jul%202025)%20with%20Vishal%20Ji%20%26%20Vikram%20Ji%20in%20Bengaluru!%20https%3A%2F%2Fprograms.vvmvp.org%2Fevents%2F553%2F" target="_blank" title="Share on WhatsApp">
-        <svg viewBox="0 0 32 32" width="24" height="24"><path fill="#8B4513" d="M16.1 2.9C8.8 2.9 2.9 8.8 2.9 16.1c0 2.7.7 5.2 2 7.4L2 30l6.7-2.1c2 1.1 4.4 1.8 7 1.8 7.3 0 13.2-5.9 13.2-13.2S23.4 2.9 16.1 2.9zM16 27.8c-2.3 0-4.4-.6-6.2-1.7l-.4-.2-4 1.2 1.3-3.9-.2-.4c-1.1-1.7-1.7-3.7-1.7-5.8 0-5.8 4.8-10.6 10.6-10.6S26.6 10.3 26.6 16c0 5.9-4.8 10.7-10.6 10.7zm5.4-8.1c-.3-.2-1.6-.8-1.8-.9-.2-.1-.3-.2-.5.2-.2.3-.6.9-.7 1.1-.1.2-.3.2-.6.1-.3-.2-1.1-.4-2.1-1.3-.8-.7-1.4-1.6-1.6-1.9-.1-.3 0-.5.1-.7.1-.1.3-.3.4-.4.1-.2.2-.3.3-.5.1-.1.1-.3 0-.5-.1-.2-.5-1.3-.7-1.8-.2-.5-.4-.4-.5-.4-.1 0-.3 0-.5 0s-.5.1-.7.3c-.2.2-1 1-1 2.5s1.1 2.8 1.3 3c.2.3 2.1 3.1 5.1 4.3.7.3 1.3.5 1.8.6.8.2 1.6.2 2.2.1.7-.1 2.2-.9 2.5-1.7.3-.7.3-1.3.2-1.4-.1-.1-.2-.2-.4-.3z"/></svg>
-      </a>
-      <a href="https://www.instagram.com/" target="_blank" title="Instagram">
-        <svg viewBox="0 0 32 32" width="24" height="24"><path fill="#8B4513" d="M22.3 2H9.7C5.6 2 2.3 5.3 2.3 9.4v12.6c0 4.1 3.3 7.4 7.4 7.4h12.6c4.1 0 7.4-3.3 7.4-7.4V9.4c.1-4.1-3.2-7.4-7.4-7.4zM28 22c0 3.1-2.6 5.7-5.7 5.7H9.7C6.6 27.7 4 25.1 4 22V9.4C4 6.3 6.6 3.7 9.7 3.7h12.6C25.4 3.7 28 6.3 28 9.4V22zm-12-14.3c-4.2 0-7.7 3.4-7.7 7.7s3.4 7.7 7.7 7.7 7.7-3.4 7.7-7.7-3.5-7.7-7.7-7.7zm0 12.6c-2.7 0-4.9-2.2-4.9-4.9s2.2-4.9 4.9-4.9 4.9 2.2 4.9 4.9-2.2 4.9-4.9 4.9zM25 7.2c0 .8-.6 1.4-1.4 1.4S22.2 8 22.2 7.2s.6-1.4 1.4-1.4 1.4.6 1.4 1.4z"/></svg>
-      </a>
-    </div>
+        <div class="social">
+          <a href="https://api.whatsapp.com/send?text=Join%20the%20Happiness%20Program..." target="_blank" title="Share on WhatsApp">
+            <img src="whatsapp.svg" alt="WhatsApp" width="24" height="24"/>
+          </a>
+          <a href="https://www.instagram.com/" target="_blank" title="Instagram">
+            <img src="instagram.svg" alt="Instagram" width="24" height="24"/>
+          </a>
+        </div>
 
-    <p class="countdown">⏳ Starts in <span id="timer"></span></p>
+        <p class="countdown">⏳ Starts in <span id="timer"></span></p>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -71,4 +76,3 @@ https://programs.vvmvp.org/events/553/</textarea>
   </script>
 </body>
 </html>
-
