--- a/index.html
+++ b/index.html
@@ -1,56 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happiness Program</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <div class="phone-frame">
-      <div class="card">
-        <h1>Happiness Program</h1>
-        <p class="subtitle">with Vishal Ji & Vikram Ji</p>
+  <div class="iphone-container">
+    <div class="notch"></div>
+    <div class="card">
+      <h1>Happiness Program</h1>
+      <p class="subtitle">with Vishal Ji & Vikram Ji</p>
 
-        <div class="section">
-          <p class="location">
-            <span class="pin">📍</span> <strong>Location:</strong><br />
-            Art of Living International Center<br />
-            Bengaluru, Karnataka
-          </p>
-          <a href="https://goo.gl/maps/K7A1Yhtz1yN2" target="_blank" class="btn btn-map">Google Maps</a>
-        </div>
+      <div class="section">
+        <p class="location"><span class="pin">📍</span> <strong>Location:</strong><br>
+          Art of Living International Center<br>
+          Bengaluru, Karnataka
+        </p>
+        <a href="https://goo.gl/maps/K7A1Yhtz1yN2" target="_blank" class="btn btn-map">Google Maps</a>
+      </div>
 
-        <ul class="timeline">
-          <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
-          <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
-          <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
-          <li><strong>28 Jul</strong> – Checkout by 9:30 AM</li>
-        </ul>
+      <ul class="timeline">
+        <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
+        <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
+        <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
+        <li><strong>28 Jul</strong> – Checkout by 9:30 AM</li>
+      </ul>
 
-        <a href="https://programs.vvmvp.org/events/553/" class="btn btn-register" target="_blank">Register Today</a>
+      <a href="https://programs.vvmvp.org/events/553/" class="btn btn-register" target="_blank">Register Today</a>
 
-        <div class="copy-section">
-          <textarea readonly class="copy-text" id="details">Happiness Program | 25–27 July 2025
+      <div class="copy-section">
+        <textarea readonly class="copy-text" id="details">Happiness Program | 25–27 July 2025
 Vishal Ji & Vikram Ji
 Bangalore Ashram
 https://programs.vvmvp.org/events/553/</textarea>
-          <button onclick="copyDetails()" class="btn btn-copy">Copy Details</button>
-        </div>
-
-        <div class="social">
-          <a href="https://api.whatsapp.com/send?text=Join%20the%20Happiness%20Program..." target="_blank" title="Share on WhatsApp">
-            <img src="whatsapp.svg" alt="WhatsApp" width="24" height="24"/>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank" title="Instagram">
-            <img src="instagram.svg" alt="Instagram" width="24" height="24"/>
-          </a>
-        </div>
-
-        <p class="countdown">⏳ Starts in <span id="timer"></span></p>
+        <button onclick="copyDetails()" class="btn btn-copy">Copy Details</button>
       </div>
+
+      <div class="social">
+        <a href="https://api.whatsapp.com/send?text=Join%20the%20Happiness%20Program%20(25–27%20Jul%202025)%20with%20Vishal%20Ji%20%26%20Vikram%20Ji%20in%20Bengaluru!%20https%3A%2F%2Fprograms.vvmvp.org%2Fevents%2F553%2F" target="_blank" title="Share on WhatsApp">
+          <img src="whatsapp-icon.svg" width="24" height="24" alt="WhatsApp">
+        </a>
+        <a href="https://www.instagram.com/" target="_blank" title="Instagram">
+          <img src="instagram-icon.svg" width="24" height="24" alt="Instagram">
+        </a>
+      </div>
+
+      <p class="countdown">⏳ Starts in <span id="timer"></span></p>
     </div>
   </div>
 
