--- a/index.html
+++ b/index.html
@@ -6,6 +6,149 @@
   <title>Happiness Program</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background: #f0f2f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .iphone-container {
+      width: 390px;
+      height: 844px;
+      background: #fff;
+      border-radius: 40px;
+      box-shadow: 0 0 40px rgba(0, 0, 0, 0.08);
+      overflow: hidden;
+      border: 12px solid #000;
+      position: relative;
+    }
+
+    .notch {
+      width: 200px;
+      height: 30px;
+      background: #000;
+      border-radius: 0 0 20px 20px;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+    }
+
+    .card {
+      padding: 32px 24px;
+      padding-top: 60px;
+      color: #2c2c2c;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      font-weight: 600;
+      margin-bottom: 0.3rem;
+    }
+
+    .subtitle {
+      font-size: 1rem;
+      color: #6c757d;
+      margin-bottom: 1.5rem;
+    }
+
+    .section {
+      margin-bottom: 1.5rem;
+    }
+
+    .location {
+      color: #495057;
+      line-height: 1.5;
+    }
+
+    .pin {
+      font-size: 1.2rem;
+      margin-right: 4px;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 0.7rem;
+      background-color: #5c6ac4;
+      color: white;
+      padding: 10px 16px;
+      border-radius: 12px;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 0.95rem;
+      transition: 0.2s;
+    }
+
+    .btn:hover {
+      background-color: #3f4cb2;
+    }
+
+    .timeline {
+      list-style: none;
+      padding-left: 0;
+      margin: 1rem 0;
+    }
+
+    .timeline li {
+      margin-bottom: 0.6rem;
+      font-size: 0.95rem;
+    }
+
+    .btn-register {
+      background-color: #ff9f1c;
+      color: #000;
+    }
+
+    .copy-section {
+      margin-top: 1.5rem;
+      margin-bottom: 1.2rem;
+    }
+
+    .copy-text {
+      width: 100%;
+      height: 80px;
+      padding: 10px;
+      border-radius: 10px;
+      border: 1px solid #dee2e6;
+      background-color: #f8f9fa;
+      font-size: 0.9rem;
+      resize: none;
+      margin-bottom: 0.5rem;
+    }
+
+    .btn-copy {
+      width: 100%;
+      padding: 10px;
+      background-color: #5c6ac4;
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      font-size: 0.9rem;
+      cursor: pointer;
+    }
+
+    .btn-copy:hover {
+      background-color: #3f4cb2;
+    }
+
+    .social {
+      display: flex;
+      gap: 20px;
+      margin: 1rem 0;
+    }
+
+    .countdown {
+      font-size: 0.95rem;
+      color: #6c757d;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <div class="iphone-container">
