--- a/index.html
+++ b/index.html
@@ -14,56 +14,61 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f9fafb;
-      color: #222;
+      background-color: #f8f8f8;
+      color: #1f1f1f;
       display: flex;
       justify-content: center;
       padding: 40px 16px;
     }
 
     .card-flat {
-      max-width: 600px;
+      max-width: 500px;
       width: 100%;
-      background-color: #fff;
-      border-radius: 16px;
+      background-color: #ffffff;
+      border: 1px solid #e5e5e5;
+      border-radius: 24px;
       padding: 32px;
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 4px 14px rgba(0, 0, 0, 0.04);
     }
 
     h1 {
-      font-size: 2rem;
-      margin-bottom: 0.25rem;
-      color: #111827;
+      font-size: 1.75rem;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+      color: #1f1f1f;
     }
 
     .subtitle {
-      color: #6b7280;
+      color: #555;
       font-size: 1rem;
       margin-bottom: 1.5rem;
     }
 
     .info-block {
       margin-bottom: 1.5rem;
+      font-size: 0.95rem;
       line-height: 1.6;
     }
 
     .info-block strong {
-      color: #111827;
+      font-weight: 600;
+      color: #1f1f1f;
     }
 
     .timeline {
-      padding-left: 1.2rem;
+      padding-left: 1rem;
       margin-bottom: 1.5rem;
     }
 
     .timeline li {
-      margin-bottom: 0.6rem;
+      margin-bottom: 0.5rem;
     }
 
     .footer-note {
-      font-size: 0.9rem;
-      color: #6b7280;
+      font-size: 0.85rem;
+      color: #666;
       text-align: center;
+      margin-top: 1.5rem;
     }
   </style>
 </head>
@@ -73,20 +78,20 @@
     <p class="subtitle">with Vishal Ji & Vikram Ji</p>
 
     <div class="info-block">
-      <p><strong>Location:</strong><br>
-      Art of Living International Center,<br>
+      <p><strong>Location</strong><br>
+      Art of Living International Center<br>
       Bengaluru, Karnataka</p>
     </div>
 
     <ul class="timeline">
-      <li><strong>24 Jul:</strong> Check-in from 2:00 PM</li>
-      <li><strong>25 Jul:</strong> Program starts at 9:30 AM</li>
-      <li><strong>27 Jul:</strong> Program ends at 5:00 PM</li>
-      <li><strong>28 Jul:</strong> Checkout by 9:30 AM</li>
+      <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
+      <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
+      <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
+      <li><strong>28 Jul</strong> – Checkout by 9:30 AM</li>
     </ul>
 
     <div class="info-block">
-      <p><strong>Program Link:</strong><br>
+      <p><strong>Program Link</strong><br>
       https://programs.vvmvp.org/events/553/</p>
     </div>
 
