--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       border-radius: 24px;
       padding: 32px;
       box-shadow: 0 4px 14px rgba(0, 0, 0, 0.04);
+      position: relative;
     }
 
     h1 {
@@ -64,6 +65,51 @@
       margin-bottom: 0.5rem;
     }
 
+    .button-link {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.75rem 1.25rem;
+      background-color: #1f1f1f;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: 600;
+      transition: background-color 0.3s ease;
+    }
+
+    .button-link:hover {
+      background-color: #333;
+    }
+
+    .copy-section {
+      margin-top: 1.5rem;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .copy-input {
+      padding: 0.5rem;
+      font-family: monospace;
+      flex-grow: 1;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+    .copy-btn {
+      padding: 0.5rem 1rem;
+      background-color: #1f1f1f;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    .copy-btn:hover {
+      background-color: #333;
+    }
+
     .footer-note {
       font-size: 0.85rem;
       color: #666;
@@ -81,6 +127,7 @@
       <p><strong>Location</strong><br>
       Art of Living International Center<br>
       Bengaluru, Karnataka</p>
+      <a class="button-link" href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" target="_blank">📍 View on Google Maps</a>
     </div>
 
     <ul class="timeline">
@@ -92,10 +139,25 @@
 
     <div class="info-block">
       <p><strong>Program Link</strong><br>
-      https://programs.vvmvp.org/events/553/</p>
+      <a class="button-link" href="https://programs.vvmvp.org/events/553/" target="_blank">Register Today</a></p>
+    </div>
+
+    <div class="copy-section">
+      <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText" readonly>
+      <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
     </div>
 
     <p class="footer-note">Starts on 25 July 2025. Organized at the Bangalore Ashram.</p>
   </div>
+
+  <script>
+    function copyToClipboard() {
+      const copyText = document.getElementById('copyText');
+      copyText.select();
+      copyText.setSelectionRange(0, 99999);
+      document.execCommand('copy');
+      alert('Copied to clipboard');
+    }
+  </script>
 </body>
 </html>
