--- a/index.html
+++ b/index.html
@@ -1,133 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happiness Program</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
+    :root {
+      --bg: #f7f7f7;
+      --text: #1f1f1f;
+      --subtle: #666;
+      --border: #e4e4e4;
+      --primary: #1f1f1f;
+    }
+
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f8f8f8;
-      color: #1f1f1f;
+      background-color: var(--bg);
+      color: var(--text);
       display: flex;
       justify-content: center;
+      align-items: center;
       padding: 40px 16px;
+      min-height: 100vh;
     }
 
-    .card-flat {
-      max-width: 500px;
+    .iphone-frame {
+      background-color: white;
+      border-radius: 36px;
+      max-width: 390px;
       width: 100%;
-      background-color: #ffffff;
-      border: 1px solid #e5e5e5;
-      border-radius: 24px;
-      padding: 32px;
-      box-shadow: 0 4px 14px rgba(0, 0, 0, 0.04);
-      position: relative;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+      padding: 32px 24px;
+      border: 1px solid var(--border);
     }
 
     h1 {
-      font-size: 1.75rem;
+      font-size: 1.5rem;
       font-weight: 600;
-      margin-bottom: 0.5rem;
-      color: #1f1f1f;
+      margin-bottom: 0.25rem;
     }
 
     .subtitle {
-      color: #555;
-      font-size: 1rem;
+      font-size: 0.95rem;
+      color: var(--subtle);
       margin-bottom: 1.5rem;
     }
 
     .info-block {
-      margin-bottom: 1.5rem;
-      font-size: 0.95rem;
-      line-height: 1.6;
+      margin-bottom: 1.25rem;
+    }
+
+    .info-block p {
+      font-size: 0.9rem;
+      line-height: 1.5;
+      color: var(--text);
     }
 
     .info-block strong {
+      display: inline-block;
+      margin-bottom: 4px;
       font-weight: 600;
-      color: #1f1f1f;
     }
 
-    .timeline {
-      padding-left: 1rem;
+    .map-button, .register-button {
+      display: inline-block;
+      background-color: var(--primary);
+      color: white;
+      padding: 0.6rem 1.2rem;
+      border-radius: 12px;
+      text-decoration: none;
+      font-size: 0.85rem;
+      font-weight: 600;
+      margin-top: 10px;
+      transition: background 0.3s ease;
+    }
+
+    .map-button:hover,
+    .register-button:hover {
+      background-color: #333;
+    }
+
+    ul.timeline {
+      list-style: none;
+      padding-left: 0;
       margin-bottom: 1.5rem;
     }
 
     .timeline li {
-      margin-bottom: 0.5rem;
+      font-size: 0.9rem;
+      padding: 4px 0;
     }
 
-    .button-link {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.75rem 1.25rem;
-      background-color: #1f1f1f;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
+    .timeline li strong {
       font-weight: 600;
-      transition: background-color 0.3s ease;
     }
 
-    .button-link:hover {
-      background-color: #333;
-    }
-
-    .copy-section {
-      margin-top: 1.5rem;
+    .copy-box {
       display: flex;
       align-items: center;
       gap: 8px;
+      margin-top: 1rem;
     }
 
     .copy-input {
-      padding: 0.5rem;
+      flex: 1;
+      padding: 8px 12px;
       font-family: monospace;
-      flex-grow: 1;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+      font-size: 0.85rem;
+      border: 1px solid var(--border);
+      border-radius: 10px;
     }
 
     .copy-btn {
-      padding: 0.5rem 1rem;
-      background-color: #1f1f1f;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
+      padding: 8px 12px;
+      background: var(--primary);
+      color: white;
+      font-size: 0.8rem;
       font-weight: 600;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
     }
 
     .copy-btn:hover {
-      background-color: #333;
+      background: #333;
     }
 
-    .footer-note {
-      font-size: 0.85rem;
-      color: #666;
+    .footer {
+      font-size: 0.75rem;
+      color: var(--subtle);
       text-align: center;
-      margin-top: 1.5rem;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
-  <div class="card-flat">
+  <div class="iphone-frame">
     <h1>Happiness Program</h1>
     <p class="subtitle">with Vishal Ji & Vikram Ji</p>
 
     <div class="info-block">
-      <p><strong>Location</strong><br>
-      Art of Living International Center<br>
-      Bengaluru, Karnataka</p>
-      <a class="button-link" href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" target="_blank">📍 View on Google Maps</a>
+      <p><strong>📍 Location</strong><br>
+        Art of Living International Center<br>
+        Bengaluru, Karnataka
+      </p>
+      <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="map-button" target="_blank">View on Maps</a>
     </div>
 
     <ul class="timeline">
@@ -138,25 +162,26 @@
     </ul>
 
     <div class="info-block">
-      <p><strong>Program Link</strong><br>
-      <a class="button-link" href="https://programs.vvmvp.org/events/553/" target="_blank">Register Today</a></p>
+      <p><strong>Registration</strong></p>
+      <a href="https://programs.vvmvp.org/events/553/" class="register-button" target="_blank">Register Today</a>
     </div>
 
-    <div class="copy-section">
-      <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText" readonly>
+    <div class="copy-box">
+      <input class="copy-input" type="text" id="copyText" value="Happiness Program | 25–27 July 2025" readonly />
       <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
     </div>
 
-    <p class="footer-note">Starts on 25 July 2025. Organized at the Bangalore Ashram.</p>
+    <div class="footer">⏳ Starts in 40d 6h 29m</div>
   </div>
 
   <script>
     function copyToClipboard() {
-      const copyText = document.getElementById('copyText');
+      const copyText = document.getElementById("copyText");
       copyText.select();
       copyText.setSelectionRange(0, 99999);
-      document.execCommand('copy');
-      alert('Copied to clipboard');
+      navigator.clipboard.writeText(copyText.value).then(() => {
+        alert("Copied to clipboard");
+      });
     }
   </script>
 </body>
