--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --bg: #f7f7f7;
-      --text: #1f1f1f;
-      --subtle: #666;
-      --border: #e4e4e4;
-      --primary: #1f1f1f;
+      --bg: #f4f6f9;
+      --text: #1c1c1e;
+      --muted: #7d7d7d;
+      --border: #d8dee9;
+      --accent: #7a9cc6; /* soft calming lavender-blue */
+      --accent-hover: #698db6;
+      --box-bg: #ffffff;
     }
 
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: var(--bg);
+      background: var(--bg);
       color: var(--text);
       display: flex;
       justify-content: center;
@@ -32,11 +34,11 @@
     }
 
     .iphone-frame {
-      background-color: white;
+      background: var(--box-bg);
       border-radius: 36px;
       max-width: 390px;
       width: 100%;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
       padding: 32px 24px;
       border: 1px solid var(--border);
     }
@@ -45,46 +47,45 @@
       font-size: 1.5rem;
       font-weight: 600;
       margin-bottom: 0.25rem;
+      color: var(--text);
     }
 
     .subtitle {
       font-size: 0.95rem;
-      color: var(--subtle);
+      color: var(--muted);
       margin-bottom: 1.5rem;
     }
 
     .info-block {
-      margin-bottom: 1.25rem;
+      margin-bottom: 1.5rem;
     }
 
     .info-block p {
-      font-size: 0.9rem;
+      font-size: 0.92rem;
       line-height: 1.5;
-      color: var(--text);
     }
 
     .info-block strong {
-      display: inline-block;
-      margin-bottom: 4px;
+      display: block;
       font-weight: 600;
+      margin-bottom: 4px;
     }
 
-    .map-button, .register-button {
+    .button {
       display: inline-block;
-      background-color: var(--primary);
+      background-color: var(--accent);
       color: white;
-      padding: 0.6rem 1.2rem;
+      padding: 0.6rem 1.1rem;
       border-radius: 12px;
       text-decoration: none;
       font-size: 0.85rem;
       font-weight: 600;
-      margin-top: 10px;
+      margin-top: 12px;
       transition: background 0.3s ease;
     }
 
-    .map-button:hover,
-    .register-button:hover {
-      background-color: #333;
+    .button:hover {
+      background-color: var(--accent-hover);
     }
 
     ul.timeline {
@@ -95,7 +96,7 @@
 
     .timeline li {
       font-size: 0.9rem;
-      padding: 4px 0;
+      padding: 5px 0;
     }
 
     .timeline li strong {
@@ -105,22 +106,23 @@
     .copy-box {
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 10px;
       margin-top: 1rem;
     }
 
     .copy-input {
       flex: 1;
       padding: 8px 12px;
-      font-family: monospace;
       font-size: 0.85rem;
       border: 1px solid var(--border);
       border-radius: 10px;
+      background: #f9fafc;
+      font-family: monospace;
     }
 
     .copy-btn {
       padding: 8px 12px;
-      background: var(--primary);
+      background-color: var(--accent);
       color: white;
       font-size: 0.8rem;
       font-weight: 600;
@@ -130,12 +132,12 @@
     }
 
     .copy-btn:hover {
-      background: #333;
+      background-color: var(--accent-hover);
     }
 
     .footer {
       font-size: 0.75rem;
-      color: var(--subtle);
+      color: var(--muted);
       text-align: center;
       margin-top: 2rem;
     }
@@ -147,11 +149,10 @@
     <p class="subtitle">with Vishal Ji & Vikram Ji</p>
 
     <div class="info-block">
-      <p><strong>📍 Location</strong><br>
-        Art of Living International Center<br>
-        Bengaluru, Karnataka
-      </p>
-      <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="map-button" target="_blank">View on Maps</a>
+      <p><strong>📍 Location</strong>
+      Art of Living International Center<br>
+      Bengaluru, Karnataka</p>
+      <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">View on Maps</a>
     </div>
 
     <ul class="timeline">
@@ -163,25 +164,21 @@
 
     <div class="info-block">
       <p><strong>Registration</strong></p>
-      <a href="https://programs.vvmvp.org/events/553/" class="register-button" target="_blank">Register Today</a>
+      <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register Today</a>
     </div>
 
     <div class="copy-box">
-      <input class="copy-input" type="text" id="copyText" value="Happiness Program | 25–27 July 2025" readonly />
+      <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText" readonly>
       <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
     </div>
 
-    <div class="footer">⏳ Starts in 40d 6h 29m</div>
+    <div class="footer">🧘‍♂️ Starts on 25 July 2025 | Bangalore Ashram</div>
   </div>
 
   <script>
     function copyToClipboard() {
       const copyText = document.getElementById("copyText");
-      copyText.select();
-      copyText.setSelectionRange(0, 99999);
-      navigator.clipboard.writeText(copyText.value).then(() => {
-        alert("Copied to clipboard");
-      });
+      navigator.clipboard.writeText(copyText.value);
     }
   </script>
 </body>
