--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       --text: #1c1c1e;
       --muted: #777;
       --border: #d9e1ec;
-      --accent: #9a8cdb; /* Softer visible lavender */
+      --accent: #9089f5; /* Softer visible lavender */
       --accent-hover: #8473c6;
       --box-bg: #ffffff;
     }
@@ -186,7 +186,7 @@
     </div>
 
     <div class="copy-box">
-      <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText" readonly>
+      <input class="copy-input" type="text" value="Happiness Program |25–27 July 2025 |https://www.vishalmerani.com/ | https://programs.vvmvp.org/events/553/ " id="copyText" readonly>
       <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
     </div>
 
