--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
  
 
     <div class="copy-box">
-      <input class="copy-input" type="text" value="Happiness Program |25–27 July 2025| https://www.vishalmerani.com/ | https://programs.vvmvp.org/events/553/ " id="copyText" readonly>
+      <input class="copy-input" type="text" value="Happiness Program |25–27 July 2025| 
+https://www.vishalmerani.com/ | https://programs.vvmvp.org/events/553/ " id="copyText" readonly>
       <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
     </div>
 
