--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
     <p class="subtitle">with Vishal Ji & Vikram Ji</p>
 
    <div class="info-block">
-      <p><strong>Registration</strong></p>
-      <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register Today</a>
+      <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
     </div>
     
     <div class="info-block">
