--- a/index.html
+++ b/index.html
@@ -184,7 +184,13 @@
       <li><strong>28 Jul</strong> – Checkout by 9:30 AM</li>
     </ul>
 
- 
+ <div class="copy-box" style="flex-direction: column; align-items: stretch;">
+  <div class="copy-input" style="padding: 12px; font-size: 0.9rem; border-radius: 12px;">
+    Happiness Program | 25–27 July 2025
+  </div>
+  <button class="copy-btn" style="margin-top: 10px; width: 100%;" onclick="copyToClipboard()">Copy</button>
+</div>
+
 
     <div class="copy-box">
       <input class="copy-input" type="text" value="Happiness Program |25–27 July 2025| 
