--- a/index.html
+++ b/index.html
@@ -170,6 +170,14 @@
       <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
     </div>
     
+
+    <ul class="timeline">
+      <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
+      <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
+      <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
+      <li><strong>28 Jul</strong> – Checkout by 9:30 AM</li>
+    </ul>
+
     <div class="info-block">
       <p><strong>📍 Location</strong>
       Art of Living International Center<br>
