--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
 
  <div class="copy-box" style="flex-direction: column; align-items: stretch;">
   <div class="copy-input" style="padding: 12px; font-size: 0.9rem; border-radius: 12px;">
-    Happiness Program | 25–27 July 2025
+    Happiness Program | 25–27 July 2025 |  
+https://www.vishalmerani.com/ | https://programs.vvmvp.org/events/553/ 
   </div>
   <button class="copy-btn" style="margin-top: 10px; width: 100%;" onclick="copyToClipboard()">Copy</button>
 </div>
