--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </head>
 <body>
   <div class="iphone-frame">
-    <h1>Happiness Program</h1>
+    <h1> July Happiness Program</h1>
     <p class="subtitle">with Vishal Ji & Vikram Ji</p>
 
    <div class="info-block">
