--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
 </head>
 <body>
   <div class="iphone-frame">
-    <h1> July Happiness Program</h1>
+    <h1> This July, </h1>
+<h2>Happiness Program</h2>
     <p class="subtitle">with Vishal Ji & Vikram Ji</p>
 
    <div class="info-block">
