--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
       margin-bottom: 0.25rem;
       color: var(--text);
     }
+   
+    h2 {
+      font-size: 1.3rem;
+      font-weight: 400;
+      margin-bottom: 0.23rem;
+      color: var(--text);
+    }
 
     .subtitle {
       font-size: 0.95rem;
