--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </div>
 
 
-    <div class="copy-box">
+    <div class="copy-box" style="flex-direction: column; align-items: stretch;">
       <input class="copy-input" type="text" value="Happiness Program |25–27 July 2025| 
 https://www.vishalmerani.com/ | https://programs.vvmvp.org/events/553/ " id="copyText" readonly>
       <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
