--- a/index.html
+++ b/index.html
@@ -195,10 +195,11 @@
 
 
     <div class="copy-box" style="flex-direction: column; align-items: stretch;">
-      <input class="copy-input" type="text" value="Happiness Program |25–27 July 2025| 
+      <input class="copy-input" style="padding: 12px; font-size: 0.9rem; border-radius: 12px;">  Happiness Program |25–27 July 2025| 
 https://www.vishalmerani.com/ | https://programs.vvmvp.org/events/553/ " id="copyText" readonly>
-      <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
-    </div>
+</div>
+  <button class="copy-btn" style="margin-top: 10px; width: 100%;" onclick="copyToClipboard()">Copy</button>
+</div>
 
     <div class="footer"> 🧘‍♂️ Starts on 25 July 2025 | Bangalore Ashram</div>
   </div>
