--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
     <h1> This July, </h1>
 <h2>Happiness Program</h2>
     <p class="subtitle">with Vishal Ji & Vikram Ji</p>
-
    <div class="info-block">
       <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
     </div>
@@ -192,9 +191,9 @@
       <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">View on Maps</a>
     </div>
 
-
     <div class="copy-box">
       <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText" readonly>
+ <input class="copy-input" type="text" value="https://julyhp.created.app/" id="copyText" readonly>
       <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
     </div>
 
