--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
    <div class="info-block">
       <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
     </div>
-
+<div>     <p class="subtitle"> In person | English, Hindi </p> </div>
     <ul class="timeline">
       <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
       <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
