--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <h1> This July, </h1>
 <h2>Happiness Program</h2>
     <p class="subtitle">with Vishal Ji & Vikram Ji</p>
-<div>     <p class="subtitle"> In person | English, Hindi </p> </div>
+  <p class="subtitle"> In person | English, Hindi </p> 
    <div class="info-block">
       <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
     </div>
