--- a/index.html
+++ b/index.html
@@ -127,20 +127,20 @@
       font-family: monospace;
     }
 
-    .copy-btn {
-      padding: 8px 12px;
-      background-color: var(--accent);
-      color: white;
-      font-size: 0.8rem;
-      font-weight: 600;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-    }
+.copy-btn {
+  padding: 8px 12px;
+  background-color: #E6E6FA; /* Just hardcoded lavender */
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 600;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
 
-    .copy-btn:hover {
-      background-color: var(--accent-hover);
-    }
+.copy-btn:hover {
+  background-color: #E6E6AA; /* Darker mint on hover */
+}
 
     .footer {
       font-size: 0.75rem;
