--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 }
 
 .copy-btn:hover {
-  background-color: #E6E6AA; /* Darker mint on hover */
+  background-color: #734f96; /* Darker lavender on hover */
 }
 
     .footer {
