--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 
     .slide-container {
       display: flex;
-      overflow-x: scroll;
+      overflow-x: auto;
       scroll-snap-type: x mandatory;
       -webkit-overflow-scrolling: touch;
       width: 100vw;
-      max-width: 100vw;
       height: 100%;
       scroll-behavior: smooth;
     }
@@ -48,7 +47,6 @@
       scroll-snap-align: start;
       flex-shrink: 0;
       width: 100vw;
-      max-width: 100vw;
       padding: 40px 16px;
       display: flex;
       justify-content: center;
@@ -150,7 +148,7 @@
     .copy-btn {
       padding: 8px 12px;
       background-color: #E6E6FA;
-      color: white;
+      color: black;
       font-size: 0.8rem;
       font-weight: 600;
       border: none;
@@ -160,6 +158,7 @@
 
     .copy-btn:hover {
       background-color: #734f96;
+      color: white;
     }
 
     .footer {
@@ -180,7 +179,6 @@
       color: var(--accent-hover);
     }
 
-    /* Optional: Dot Indicator */
     .dots {
       text-align: center;
       margin: 16px 0;
@@ -204,7 +202,7 @@
 <body>
 
   <div class="slide-container" id="slides">
-    <!-- Slide 1: Happiness Program -->
+    <!-- Slide 1 -->
     <div class="slide">
       <div class="iphone-frame">
         <h1>This July,</h1>
@@ -240,7 +238,7 @@
       </div>
     </div>
 
-    <!-- Slide 2: Sleep & Anxiety Program -->
+    <!-- Slide 2 -->
     <div class="slide">
       <div class="iphone-frame">
         <h1>🌙✨ This June, </h1>
@@ -281,4 +279,27 @@
     </div>
   </div>
 
-  <!-- Dot Indicator -
+  <div class="dots">
+    <span class="dot active"></span>
+    <span class="dot"></span>
+  </div>
+
+  <script>
+    function copyToClipboard(id) {
+      const input = document.getElementById(id);
+      input.select();
+      input.setSelectionRange(0, 99999);
+      document.execCommand("copy");
+    }
+
+    const slides = document.getElementById("slides");
+    const dots = document.querySelectorAll(".dot");
+
+    slides.addEventListener("scroll", () => {
+      const index = Math.round(slides.scrollLeft / window.innerWidth);
+      dots.forEach(dot => dot.classList.remove("active"));
+      if (dots[index]) dots[index].classList.add("active");
+    });
+  </script>
+</body>
+</html>
