--- a/index.html
+++ b/index.html
@@ -160,17 +160,17 @@
 
   <!-- Card 1: June Sleep & Anxiety Program -->
   <div class="iphone-frame">
-    <h1>🌙✨ This June, </h1>
-    <h2> we are with NEW Techniques for Deep Sleep & Anxiety Relief</h2>
+    <h1> This June, </h1>
+    <h2> we are NEW Techniques for Deep Sleep & Anxiety Relief</h2>
     <p class="subtitle">with Vishal Merani</p>
     <div class="info-block">
       <p>
-        😞 Struggling with stress, anxiety, or restless nights?<br>
-        🌊 Experience powerful breathwork curated by Gurudev.<br><br>
+         Struggling with stress, anxiety, or restless nights?<br>
+         Experience powerful breathwork curated by Gurudev.<br><br>
 
-        ✅ Calm anxiety with a proven protocol<br>
-        ✅ Sleep better with simple techniques<br>
-        ✅ Activate parasympathetic system naturally
+        Calm anxiety with a proven protocol<br>
+        Sleep better with simple techniques<br>
+        Activate parasympathetic system naturally
       </p>
     </div>
 
