--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
 
   <!-- Card 1: June Sleep & Anxiety Program -->
   <div class="iphone-frame">
-    <h1> This June, </h1>
-    <h2> we are NEW Techniques for Deep Sleep & Anxiety Relief</h2>
-    <p class="subtitle">with Vishal Merani</p>
+    <h1> This June,  </h1>
+    <h2>  Discover Deep Sleep & Anxiety Relief  </h2>
+    <p class="subtitle"> NEW Techniques your way with Vishal Merani</p>
     <div class="info-block">
       <p>
          Struggling with stress, anxiety, or restless nights?<br>
-         Experience powerful breathwork curated by Gurudev.<br><br>
+         Experience powerful breathwork curated by Gurudev by Channeling your Inner Calm.<br><br>
 
         Calm anxiety with a proven protocol<br>
         Sleep better with simple techniques<br>
@@ -182,9 +182,8 @@
     <div class="info-block">
       <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
       <p style="margin-top: 8px;">
-        For help: Madhusmita Routray<br>
+        <br>
         📞 9818503888<br>
-        📧 madhu.routray@gmail.com
       </p>
     </div>
 
@@ -193,7 +192,7 @@
       <button class="copy-btn" onclick="copyToClipboard('copyText2')">Copy</button>
     </div>
 
-    <div class="footer">💤 18–20 June 2025 | Evening Online Sessions</div>
+    <div class="footer">💤 18–20 June 2025 | Evening ♡ Online Sessions</div>
   </div>
 
   <!-- Card 2: July Happiness Program -->
