--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
   <!-- Card 1: June Sleep & Anxiety Program -->
   <div class="iphone-frame">
     <h1> This June,  </h1>
-    <h2>  Discover Deep Sleep & Anxiety Relief  </h2>
-    <p class="subtitle"> NEW Techniques your way with Vishal Merani</p>
+    <h2>  Discover DSAR </h2>
+    <p class="subtitle"> with Vishal Merani</p>
     <div class="info-block">
       <p>
          Struggling with stress, anxiety, or restless nights?<br>
