--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
     <div class="info-block">
       <p>
          Struggling with stress, anxiety, or restless nights?<br>
-         Experience powerful breathwork curated by Gurudev by Channeling your Inner Calm.<br><br>
+         Experience powerful breathwork by Channeling your Inner Calm.<br><br>
 
-        Calm anxiety with a proven protocol<br>
+        Calm your anxiety with a proven protocol<br>
         Sleep better with simple techniques<br>
         Activate parasympathetic system naturally
       </p>
