--- a/index.html
+++ b/index.html
@@ -166,10 +166,11 @@
     <div class="info-block">
       <p>
          Struggling with stress, anxiety, or restless nights?<br>
-         Experience powerful breathwork by Channeling your Inner Calm.<br><br>
+         Experience powerful breathwork :) <br>
+        Channel Inner Calm.<br><br>
 
-        Calm your anxiety with a proven protocol<br>
-        Sleep better with simple techniques<br>
+"Drop your anxiety with a proven method, sleep better using simple techniques, and naturally activate your parasympathetic system."
+ <br>
         Activate parasympathetic system naturally
       </p>
     </div>
@@ -188,7 +189,7 @@
     </div>
 
     <div class="copy-box">
-      <input class="copy-input" type="text" value="Sleep & Anxiety Relief | 18–20 June 2025" id="copyText2" readonly>
+      <input class="copy-input" type="text" value=" Deep Sleep & Anxiety Relief | 18–20 June 2025" id="copyText2" readonly>
       <button class="copy-btn" onclick="copyToClipboard('copyText2')">Copy</button>
     </div>
 
