--- a/index.html
+++ b/index.html
@@ -165,13 +165,12 @@
     <p class="subtitle"> with Vishal Merani</p>
     <div class="info-block">
       <p>
-         Struggling with stress, anxiety, or restless nights?<br>
-         Experience powerful breathwork :) <br>
-        Channel Inner Calm.<br><br>
+         Do not fight with with stress, anxiety, or restless nights anymore<br>
+         docode and conquer with powerful breathwork  <br>
+        <br><br>
 
 "Drop your anxiety with a proven method, sleep better using simple techniques, and naturally activate your parasympathetic system."
  <br>
-        Activate parasympathetic system naturally
       </p>
     </div>
 
