--- a/index.html
+++ b/index.html
@@ -165,11 +165,16 @@
     <p class="subtitle"> with Vishal Merani</p>
     <div class="info-block">
       <p>
-         Do not fight with with stress, anxiety, or restless nights anymore<br>
-         docode and conquer with powerful breathwork  <br>
-        <br><br>
+    <br>
+🌿 Stop struggling with stress, anxiety, and restless nights <br>
 
-"Drop your anxiety with a proven method, sleep better using simple techniques, and naturally activate your parasympathetic system."
+💨 Decode and overcome them with powerful breathwork techniques <br>
+
+✅ Calm your anxiety with a proven method <br>
+
+😴 Sleep better using simple, effective tools <br>
+
+🧘‍♀️ Activate your parasympathetic system naturally for deep relaxation <br>
  <br>
       </p>
     </div>
