--- a/index.html
+++ b/index.html
@@ -166,15 +166,13 @@
     <div class="info-block">
       <p>
     <br>
-🌿 Stop struggling with stress, anxiety, and restless nights <br>
+ Stop struggling! Decode and overcome them with powerful breathwork techniques <br>
 
-💨 Decode and overcome them with powerful breathwork techniques <br>
+Proven method to calm anxiety <br>
 
-✅ Calm your anxiety with a proven method <br>
+Simple techniques for better sleep <br>
 
-😴 Sleep better using simple, effective tools <br>
-
-🧘‍♀️ Activate your parasympathetic system naturally for deep relaxation <br>
+Naturally activate parasympathetic system <br>
  <br>
       </p>
     </div>
