--- a/index.html
+++ b/index.html
@@ -168,12 +168,7 @@
     <br>
  Stop struggling! Decode and overcome them with powerful breathwork techniques <br>
 
-Proven method to calm anxiety <br>
 
-Simple techniques for better sleep <br>
-
-Naturally activate parasympathetic system <br>
- <br>
       </p>
     </div>
 
@@ -184,6 +179,13 @@ Naturally activate parasympathetic system <br>
 
     <div class="info-block">
       <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
+<p> Proven method to calm anxiety <br>
+
+Simple techniques for better sleep <br>
+
+Naturally activate parasympathetic system <br>
+ <br>
+</p>
       <p style="margin-top: 8px;">
         <br>
         📞 9818503888<br>
