--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
 
     <div class="info-block">
       <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
-<p> Proven method to calm anxiety <br>
 
-Simple techniques for better sleep <br>
-
-Naturally activate parasympathetic system <br>
+<p> <br>
+     <li> Proven method to calm anxiety</li>
+      <li> Simple techniques for better sleep</li>
+     <li> Naturally activate parasympathetic system </li>
  <br>
 </p>
       <p style="margin-top: 8px;">
