--- a/index.html
+++ b/index.html
@@ -173,18 +173,15 @@
     </div>
 
     <ul class="timeline">
-      <li><strong>18–20 June 2025</strong></li>
-      <li><strong>⏰ Time:</strong> 7:30 PM – 10:00 PM</li>
+      <li><strong>18–20 </strong></li>
+      <li><strong>Time:</strong> 7:30 PM – 10:00 PM</li>
     </ul>
-
     <div class="info-block">
       <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
-
-<p> <br>
+<p> 
      <li> Proven method to calm anxiety</li>
       <li> Simple techniques for better sleep</li>
      <li> Naturally activate parasympathetic system </li>
- <br>
 </p>
       <p style="margin-top: 8px;">
         <br>
