--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
       margin-bottom: 0.24rem;
     }
 
+  h3 {
+      font-size: 1.2rem;
+      font-weight: 450;
+      margin-bottom: 0.23rem;
+background-color: #E6EFFA;
+    }
+
     .subtitle {
       font-size: 0.95rem;
       color: var(--muted);
