--- a/index.html
+++ b/index.html
@@ -172,8 +172,10 @@ background-color: #E6EFFA;
     <p class="subtitle"> with Vishal Merani</p>
     <div class="info-block">
       <p>
+<h3>  Stress, Sleep, Anxiety </h3>
+
     <br>
- Stop struggling! Decode and overcome them with powerful breathwork techniques <br>
+ Stop struggling! Decode and overcome them with powerful yet simple breathwork <br>
 
 
       </p>
