--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@ background-color: #E6EFFA;
     </div>
 
     <ul class="timeline">
-      <li><strong>18–20 </strong></li>
-      <li><strong>Time:</strong> 7:30 PM – 10:00 PM</li>
+      <li>this 18, 19, 20 <strong>Time:</strong> 7:30 PM – 10:00 PM</li>
     </ul>
     <div class="info-block">
       <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
