--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     }
 
   h3 {
-      font-size: 1.2rem;
-      font-weight: 450;
-      margin-bottom: 0.23rem;
-background-color: #E6EFFA;
+      font-size: 1.15rem;
+      font-weight: 400;
+      margin-bottom: 0.22rem;
+background-color: #E6FFFA;
     }
 
     .subtitle {
