--- a/index.html
+++ b/index.html
@@ -173,10 +173,9 @@ background-color: #E6FFFA;
     <div class="info-block">
       <p>
 <h3>  Stress, Sleep, Anxiety </h3>
-
-    <br>
- Stop struggling! Decode and overcome them with powerful yet simple breathwork <br>
-
+    <p class="subtitle"> with Vishal Merani
+ Stop struggling! Decode and overcome them with powerful yet simple breathwork 
+</p>
 
       </p>
     </div>
